<resources>
	<string name="app_name_title">MULTISTREAMING</string>
	<string name="app_name">Multistreaming</string>
	<string name="no_streams">No Streams Available</string>
	<string name="string_on_off">\On/Off WIFI</string>
	<string name="string_discover_peers">\Discover peers</string>
	<string name="string_transfer_file">\Transfer File</string>
	<string name="string_camera">Camera</string>
	<string name="mi_dispositivo">MY DEVICE</string>
	<string name="boton_record">RECORD</string>
	<string name="record_video">play</string>
	<string name="change_camera">change camera</string>
	<string name="dispositivos_encontrados">STREAMS AVAILABLE</string>
	<string name="connection_status">Connection Status</string>
	<string name="home">Home</string>
	<string name="settings">Settings</string>
	<string name="information">Information</string>
	<string name="menu_gallery">Gallery</string>
    <string name="witness">Witness</string>
	<string name="humanitarian">Humanitarian</string>
	<string name="description_mode">In order to use the application, you must select the corresponding mode.</string>
	<string name="todo">TODO</string>
	<string name="mode_witness">w</string>
	<string name="mode_humanitarian">h</string>

</resources>