<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_gallery"/>
        <item
            android:id="@+id/nav_infoApp"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/information" />
    </group>


</menu>
