<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="329dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/description_mode"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/witnessButton"
        android:layout_width="190dp"
        android:layout_height="157dp"
        android:layout_marginTop="48dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:elevation="10dp"
        android:src="@drawable/witness_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescription" />

    <ImageButton
        android:id="@+id/humanitarianButton"
        android:layout_width="179dp"
        android:layout_height="161dp"
        android:layout_marginTop="55dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        android:elevation="10dp"
        android:src="@drawable/humanitarian_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWitness" />

    <TextView
        android:id="@+id/textWitness"
        android:layout_width="192dp"
        android:layout_height="36dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:text="@string/witness"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/witnessButton" />

    <TextView
        android:id="@+id/textHumanitarian"
        android:layout_width="177dp"
        android:layout_height="37dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:text="@string/humanitarian"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humanitarianButton" />

</androidx.constraintlayout.widget.ConstraintLayout>