<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:text="@string/mi_dispositivo"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:layout_below="@id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="#162E8DA6"
        android:padding="3dip">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="58dp"
            android:layout_height="85dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#FFFFFF"
            android:src="@drawable/machine" />

        <LinearLayout
            android:layout_width="298dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/my_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/my_address"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:singleLine="true" />

            <TextView
                android:id="@+id/my_status"
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:singleLine="true" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/stream_list"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/dispositivos_encontrados"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <Button
        android:id="@+id/recordButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/botton_design"
        android:drawableStart="@android:drawable/ic_media_play"
        android:drawableTint="#FFFFFF"
        android:fontFamily="sans-serif"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:shadowRadius="3"
        android:text="@string/boton_record"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        android:textStyle="bold" />

    <fragment android:name="d2d.testing.gui.FragmentStreams"
        android:id="@+id/st_fragment"
        android:layout_width="wrap_content"
        android:layout_height="406dp"
        android:layout_above="@+id/recordButton"
        android:layout_below="@+id/stream_list"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"/>

    <include layout="@layout/content_main" />

</RelativeLayout>