<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_below="@id/connectionStatus"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:text="@string/mi_dispositivo" />

        <ListView
            android:id="@+id/streamListView"
            android:layout_width="match_parent"
            android:layout_height="214dp"
            android:layout_above="@+id/uploadButton"
            android:layout_below="@+id/stream_list"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp">

        </ListView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_below="@id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="14dp"
            android:background="#162E8DA6"
            android:padding="3dip">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="58dp"
                android:layout_height="85dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/todo"
                android:src="@drawable/machine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/my_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/my_address"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/my_status"
                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:singleLine="true" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/stream_list"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:text="@string/dispositivos_encontrados"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/connectionStatus"
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="60dp"
            android:text="@string/connection_status"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/recordButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#E45C51"
            android:backgroundTintMode="src_in"
            android:drawableLeft="@android:drawable/ic_media_play"
            android:drawableTint="#FFFFFF"
            android:fontFamily="sans-serif-thin"
            android:text="RECORD"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="wrap_content"
            android:layout_height="69dp"
            android:layout_above="@+id/recordButton"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="49dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#409FB8"
            android:backgroundTintMode="src_in"
            android:drawableLeft="@android:drawable/ic_menu_upload"
            android:drawablePadding="0dip"
            android:drawableTint="#FFFFFF"
            android:drawableTintMode="src_in"
            android:drawingCacheQuality="auto"
            android:duplicateParentState="false"
            android:editable="false"
            android:fontFamily="sans-serif-thin"
            android:shadowRadius="1"
            android:text="UPLOAD"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>